objects/SVMXC__Service_Contract_Products__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Active__c</fullName>
        <formula>SVMXC__Service_Contract__r.SVMXC__Active__c  &amp;&amp; 
 NOT(SVMXC__Service_Contract__r.SMAX_PS_IsDeleted__c) &amp;&amp; 
 NOT(SMAX_PS_IsDeleted__c)</formula>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Covered Product Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Next_PM_Date__c</fullName>
        <description>This custom date field is the next PM date for the covered product. This date is filled via process builder using the recommended PM Date from the Parent IP</description>
        <inlineHelpText>This custom date field is the next PM date for the covered product. This date is filled via process builder using the recommended PM Date from the Parent IP</inlineHelpText>
        <label>Next PM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parent_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the Parent contract, if applicable</description>
        <inlineHelpText>Look up to the Parent contract, if applicable</inlineHelpText>
        <label>Parent Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Covered Products (Parent Contract)</relationshipLabel>
        <relationshipName>Covered_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Equipment_Number__c</fullName>
        <description>Displays the SAP Equipment Number from the Installed Product</description>
        <formula>SVMXC__Installed_Product__r.SVMX_PS_External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the SAP Equipment Number from the Installed Product</inlineHelpText>
        <label>SAP Equipment Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SLA_Terms_Notes__c</fullName>
        <description>Phase 0.1</description>
        <label>SLA Terms Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Status__c</fullName>
        <formula>TEXT(SVMXC__Installed_Product__r.SVMXC__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Contract_Active__c</fullName>
        <formula>IF(SMAX_PS_IsDeleted__c = true,IMAGE(&quot;/servlet/servlet.FileDownload?file=0153A000004IFeR&quot;, &quot;Red&quot;), SVMXC__Service_Contract__r.SVMX_PS_Item_Status__c)</formula>
        <inlineHelpText>A green symbol will display if the Contract Item is within the Contract Detail Start and End Dates.</inlineHelpText>
        <label>Item Status</label>
        <type>Text</type>
    </fields>
</CustomObject>